--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -1,5 +1,6 @@
 
 <html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
     xmlns:layout="http://www.ultrap.net.nz./thymeleaf/layout"
     layout:decorate="/layouts/_mainLayout">
 
