--- a/src/main/resources/templates/layouts/_mainLayout.html
+++ b/src/main/resources/templates/layouts/_mainLayout.html
@@ -43,7 +43,7 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Mantenimiento</div>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" th:href="@{/grupos}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Grupos
                     </a>
@@ -56,11 +56,11 @@
                         Docentes-Grupos
                     </a>
                 </div>
+            </div>
             <div class="sb-sidenav-footer">
                 <div class="small">Logged in as:</div>
                 Sistema de asistencia
             </div>
-
         </nav>
     </div>
     <div id="layoutSidenav_content">
