--- a/src/main/resources/templates/layouts/_mainLayout.html
+++ b/src/main/resources/templates/layouts/_mainLayout.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <title>Sistema</title>
-    <link th:href="@{css/styles.css}" rel="stylesheet" />
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
@@ -47,7 +47,7 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Grupos
                     </a>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" th:href="@{docentes}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Docentes
                     </a>
@@ -87,6 +87,6 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script th:src="@{js/scripts.js}"></script>
+<script th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
